# eagerx_gui

./: .gitignore  CHANGELOG.md  Makefile  README.rst  pyproject.toml
.github/workflows/: ci.yml
eagerx_gui/: __init__.py  configuration.py  gui.py  gui_node.py  gui_terminal.py  gui_view.py  pyqtgraph_utils.py  utils.py
eagerx_gui/templates/: engine_ui_pyqt6.py  ui_pyqt5.py  ui_pyqt6.py
examples/: example_gui.py  test.graph
scripts/: run_tests.sh
tests/: test_eagerx_gui.py
